advert validation added
